# imageSource

./: .clang-format  .extract.sh  .gitignore  .gitlab-ci.yml  .install.sh  .pre-commit-config.yaml  CMakeLists.txt  DEPENDS  Makefile  README.rst  build.config  conanfile.py  contributor_license_agreement.md  entity_contributor_license_agreement.md  karabo_patch.py
ci/: lint-cppcheck
cmake/: infer_karabo_env.cmake
doc/: Makefile  requirements.txt
doc/source/: Doxyfile  camera_image_source.rst  conf.py  image_source.rst  index.rst  utils.rst
nbproject/: Karabo-Debug-Linux.mk  Karabo-Release-Linux.mk  Karabo-impl-Linux.mk  Karabo-variables-Linux.mk  configurations.xml  project.xml
src/: CMakeLists.txt  CameraImageSource.cc  CameraImageSource.hh  ImageSource.cc  ImageSource.hh  Scene.cc
src/test/: CMakeLists.txt  conanfile.py  gray21.512.raw  jpeg_test.py  rgb16_test.raw  testImageSource.cc  testrunner.cc  testrunner.hh
src/tests/: ImageSourceTest.cc  ImageSourceTest.hh  jpeg_test.py  test_runner.cc
